# rema-client

./: .eslintcache  .gitignore  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
src/: App.css  App.tsx  errorpage.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  query.graphql  schema.graphql
src/components/: HandleAuth.tsx  Login.tsx  SignIn.tsx
